add post request

--- a/src/app/todo/todo-list/todo-list.component.html
+++ b/src/app/todo/todo-list/todo-list.component.html
@@ -5,6 +5,10 @@
     <label for="title">Title</label>
     <input id="title" type="text" formControlName="title">
   </div>
+  <div>
+    <label for="title">Body</label>
+    <input id="title" type="text" formControlName="body">
+  </div>
   <button type="submit">Add</button>
 </form>
 
